🏌🚿 Checkpoint ./index.html:55065180/223

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
           rotation="0 0 0 "
           position="0 0 0.1"
           scale="0.005 0.005 0.005"
-          src="#avatarModel"
-          animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"
+          src="https://cdn.glitch.global/3fa4a16f-4f3b-4a0e-b959-ce65bca792dd/atarig.glb?v=1677189684851"
         >
         </a-gltf-model>
       </a-entity>
