--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
       vr-mode-ui="enabled: false"
       device-orientation-permission-ui="enabled:false"
     >
+       <a-assets>
+        <img id="card" src=https://cdn.glitch.global/3fa4a16f-4f3b-4a0e-b959-ce65bca792dd/atariescr.png?v=1677189672787 />
+        <a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.0/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
+      </a-assets>
       <a-camera position="0 0 0" look-controls="enabled: false"> </a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
+        <a-entity mindar-image-target="targetIndex: 0">
+        <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
         <a-gltf-model
           rotation="0 0 0 "
           position="0 0 0.1"
