--- a/index.html
+++ b/index.html
@@ -12,15 +12,26 @@
       vr-mode-ui="enabled: false"
       device-orientation-permission-ui="enabled:false"
     >
-       <a-assets>
-        <img id="atariescr" src="https://cdn.glitch.global/3fa4a16f-4f3b-4a0e-b959-ce65bca792dd/atariescr.png" />
-        <a-asset-item id="atarig" src="https://cdn.glitch.global/3fa4a16f-4f3b-4a0e-b959-ce65bca792dd/atarig.glb"></a-asset-item>
+      <a-assets>
+        <img
+          id="atariescr"
+          src="https://cdn.glitch.global/3fa4a16f-4f3b-4a0e-b959-ce65bca792dd/atariescr.png"
+        />
+        <a-asset-item
+          id="atarig"
+          src="https://cdn.glitch.global/3fa4a16f-4f3b-4a0e-b959-ce65bca792dd/atarig.glb"
+        ></a-asset-item>
       </a-assets>
       <a-camera position="0 0 0" look-controls="enabled: false"> </a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-entity mindar-image-target="targetIndex: 0">
-        <a-plane src="#atariescr" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
+        <a-plane
+          src="#atariescr"
+          position="0 0 0"
+          height="0.552"
+          width="1"
+          rotation="0 0 0"
+        ></a-plane>
         <a-gltf-model
           rotation="0 0 0 "
           position="0 0 0.1"
