💗🐇 Checkpoint ./index.html:55065180/4132

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   </head>
 
   <body>
+    <div class="arjs-loader">
+      <div>Loading, please wait...</div>
+    </div>
     <a-scene
       mindar-image="imageTargetSrc:https://cdn.glitch.global/3fa4a16f-4f3b-4a0e-b959-ce65bca792dd/targets%20(1).mind?v=1677193285803"
       vr-mode-ui="enabled: false"
