--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.5/dist/mindar-image.prod.js"></script>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.5/dist/mindar-image-aframe.prod.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+
+    <style>
+      .arjs-loader {
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.8);
+        z-index: 9999;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .arjs-loader div {
+        text-align: center;
+        font-size: 1.25em;
+        color: white;
+      }
+    </style>
+
+    <!-- rawgithack development URL -->
+    <!--<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'>
+    </script>
+    -->
+    <script src=".https://cdn.glitch.global/3fa4a16f-4f3b-4a0e-b959-ce65bca792dd/atari.mind?v=1677193285803"></script>
   </head>
 
   <body>
@@ -11,14 +36,14 @@
       <div>Loading, please wait...</div>
     </div>
     <a-scene
-      mindar-image="imageTargetSrc:https://cdn.glitch.global/3fa4a16f-4f3b-4a0e-b959-ce65bca792dd/atari.mind?v=1677193285803"
+      mindar-image="imageTargetSrc:https://cdn.glitch.global/3fa4a16f-4f3b-4a0e-b959-ce65bca792dd/targets%20(1).mind?v=1677193285803"
       vr-mode-ui="enabled: false"
       device-orientation-permission-ui="enabled:false"
     >
       <a-assets>
         <img
-          id="atariescr"
-          src="https://cdn.glitch.global/3fa4a16f-4f3b-4a0e-b959-ce65bca792dd/atariescr.png?v=1677189672787"
+          id="atari"
+          src="https://cdn.glitch.global/3fa4a16f-4f3b-4a0e-b959-ce65bca792dd/atari.mind?v=1677193285803"
         />
         <a-asset-item
           id="atarig"
@@ -29,7 +54,7 @@
 
       <a-entity mindar-image-target="targetIndex: 0">
         <a-plane
-          src="#atariescr"
+          src="#atari"
           position="0 0 0"
           height="0.552"
           width="1"
